Lavet 2 sæt mere

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,18 @@
     "iostream": "cpp",
     "*.tcc": "cpp",
     "string": "cpp",
-    "unordered_map": "cpp"
+    "unordered_map": "cpp",
+    "__bit_reference": "cpp",
+    "algorithm": "cpp",
+    "bitset": "cpp",
+    "chrono": "cpp",
+    "map": "cpp",
+    "set": "cpp",
+    "vector": "cpp",
+    "__hash_table": "cpp",
+    "__split_buffer": "cpp",
+    "__tree": "cpp",
+    "initializer_list": "cpp",
+    "iterator": "cpp"
   }
 }
